[ADD] Add header navbar display

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,9 @@
 @import './base';
 @import './color';
 
+/*Header*/
+@import './header';
+
 /********* 桌機版樣式 *********/
 @media screen and (min-width: 375px) {
 }
