--- a/src/css/style.css
+++ b/src/css/style.css
@@ -744,6 +744,40 @@ body {
   cursor: pointer;
 }
 
+/*Header*/
+/*Header css*/
+header {
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  width: 100%;
+  height: 56px;
+  text-align: center;
+  background-color: #ffffff;
+  border-bottom: 1px solid #000;
+  /*navbar*/
+}
+header .navbar {
+  position: relative;
+  height: 100%;
+}
+header .navbar__hamburger {
+  position: absolute;
+  top: 50%;
+  left: 0.5rem;
+  transform: translateY(-50%);
+  width: 24px;
+  height: 24px;
+}
+header .navbar__brand {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 136px;
+  height: 24px;
+}
+
 /********* 桌機版樣式 *********/
 
 /*# sourceMappingURL=style.css.map */
