--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,6 @@
 @import './reset';
-@import './base';
 @import './color';
+@import './base';
 
 /*Header*/
 @import './header';
@@ -15,3 +15,6 @@ main {
 
 /*Stepper*/
 @import './stepper';
+
+/*Form*/
+@import './form';
