--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -27,3 +27,10 @@ header {
     }
   }
 }
+
+/********* Header 桌機版樣式 *********/
+@media screen and (min-width: 376px) {
+  header {
+    height: 60px;
+  }
+}
