--- a/src/scss/_cart.scss
+++ b/src/scss/_cart.scss
@@ -80,6 +80,7 @@
 /********* Cart 桌機版樣式 *********/
 @media screen and (min-width: 376px) {
   .cart {
+    margin-top: 80px;
     .cart-panel {
       padding: 0 24px;
       padding-top: 32px;
@@ -109,7 +110,6 @@
       &__delivery,
       &__total {
         margin: 32px 0;
-        padding-top: 32px;
       }
     }
   }
