--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -145,6 +145,8 @@
     &__part {
       &__content {
         &.delivery-content {
+          margin-bottom: 80px;
+
           display: grid;
           grid-template-columns: 5fr 1fr;
           grid-template-rows: 60px 60px;
@@ -167,6 +169,9 @@
           &.card-number-wrapper {
             grid-template-columns: 2fr 1fr;
             grid-gap: 30px;
+          }
+          &.card-code-wrapper {
+            margin-bottom: 0;
           }
           &.delivery-wrapper {
             margin-bottom: 0;
