--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,7 +6,7 @@
 @import './header';
 
 main {
-  margin-top: 56px;
+  padding-top: 56px;
   padding-bottom: 40px;
 }
 
@@ -25,3 +25,39 @@ main {
 
 /*BtnControl*/
 @import './btnControl';
+
+/********* main 桌機版樣式 *********/
+@media screen and (min-width: 376px) {
+  main {
+    padding-top: 136px;
+    width: 85%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: minmax(300px, 6fr) minmax(auto, 100px) minmax(
+        410px,
+        5fr
+      );
+    grid-template-rows: 32px auto auto auto 32px;
+    grid-template-areas:
+      'stepper . cart'
+      'stepper . cart'
+      'form-panel . cart'
+      'btn-control . cart'
+      'btn-control . .';
+    // grid-gap: 24px;
+    section.container {
+      &.stepper {
+        grid-area: stepper;
+      }
+      &.form-panel {
+        grid-area: form-panel;
+      }
+      &.cart {
+        grid-area: cart;
+      }
+      &.btn-control {
+        grid-area: btn-control;
+      }
+    }
+  }
+}
