--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -6,6 +6,7 @@
     width: 100%;
     &[type='radio'] {
       -webkit-appearance: none;
+      cursor: pointer;
       width: 20px;
       height: 20px;
       padding: 0;
@@ -20,6 +21,7 @@
   }
   select {
     @extend %input-style;
+    cursor: pointer;
     &:invalid {
       color: $form-placeholder-color;
     }
