--- a/src/scss/_color.scss
+++ b/src/scss/_color.scss
@@ -8,3 +8,4 @@ $form-input-border-color: #4a4a4a;
 $btn-control-border-color: #e6e6eb;
 $btn-control-prev-color: #ffffff;
 $btn-control-next-color: #f67599;
+$footer-bg: #e5e5e5;
