--- a/src/css/style.css
+++ b/src/css/style.css
@@ -781,25 +781,74 @@ header {
 }
 header .navbar {
   position: relative;
+  width: 100%;
   height: 100%;
 }
 header .navbar__hamburger {
   position: absolute;
   top: 50%;
-  left: 0.5rem;
+  left: 15px;
   transform: translateY(-50%);
   width: 24px;
   height: 24px;
+}
+header .navbar__nav-list {
+  display: none;
+}
+header .navbar__nav-list__item, header .navbar__nav-list__item:active {
+  font-size: 16px;
+  font-weight: normal;
+  color: #2a2a2a;
+  font-family: "Noto Sans TC";
+  line-height: 24px;
 }
 header .navbar__brand {
   width: 136px;
   height: 24px;
 }
+header .navbar__tool-list {
+  display: none;
+}
 
 /********* Header 桌機版樣式 *********/
-@media screen and (min-width: 376px) {
+@media screen and (min-width: 768px) {
   header {
     height: 60px;
+  }
+  header .navbar {
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  header .navbar__left {
+    width: 34%;
+  }
+  header .navbar__hamburger {
+    display: none;
+  }
+  header .navbar__nav-list {
+    flex: 1 1;
+    display: flex;
+    justify-content: space-between;
+  }
+  header .navbar__brand {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  header .navbar__tool-list {
+    flex: 1 1;
+    display: flex;
+    justify-content: flex-end;
+    width: 132px;
+  }
+  header .navbar__tool-list__item {
+    width: 24px;
+    height: 24px;
+    margin-left: 32px;
   }
 }
 main {
