--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -11,19 +11,31 @@ header {
   /*navbar*/
   .navbar {
     position: relative;
+    width: 100%;
     height: 100%;
     &__hamburger {
       position: absolute;
       top: 50%;
-      left: 0.5rem;
+      left: 15px;
       transform: translateY(-50%);
       width: 24px;
       height: 24px;
+    }
+    &__nav-list {
+      display: none;
+      &__item,
+      &__item:active {
+        @include font-setting(16px);
+        line-height: 24px;
+      }
     }
     &__brand {
       @extend %position-center;
       width: 136px;
       height: 24px;
+    }
+    &__tool-list {
+      display: none;
     }
   }
 }
@@ -31,6 +43,47 @@ header {
 /********* Header 桌機版樣式 *********/
 @media screen and (min-width: 376px) {
   header {
+    // height: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  header {
     height: 60px;
+    .navbar {
+      width: 85%;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      &__left {
+        width: 34%;
+      }
+      &__hamburger {
+        display: none;
+      }
+      &__nav-list {
+        flex: 1 1;
+        display: flex;
+        justify-content: space-between;
+      }
+      &__brand {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+      &__tool-list {
+        flex: 1 1;
+        display: flex;
+        justify-content: flex-end;
+        width: 132px;
+        &__item {
+          width: 24px;
+          height: 24px;
+          margin-left: 32px;
+        }
+      }
+    }
   }
 }
