[MOD] Modify navbar add hamburger

--- a/src/scss/_color.scss
+++ b/src/scss/_color.scss
@@ -9,3 +9,4 @@ $btn-control-border-color: #e6e6eb;
 $btn-control-prev-color: #ffffff;
 $btn-control-next-color: #f67599;
 $footer-bg: #e5e5e5;
+$nav-divider-color: rgba(42, 42, 42, 0.1);
